--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "file-type": "^19.0.0",
+    "image-type": "^5.2.0",
     "openai": "^4.26.1"
   }
 }
